# floatpro-jetson

./: .gitignore  README.md  capture.py  check_camera.py  ingest_video.py  pyproject.toml  setup.sh
cloudflare/: README.md  config.yml.template  floatpro-server.service
floatpro/: __init__.py  ring_buffer.py  server.py  spin_estimator.py
floatpro/cameras/: __init__.py  ar0234.py  base.py  basler_pylon.py  flir_spinnaker.py  mock.py  ov9281.py
floatpro/static/: dashboard.html
tests/: debug_kp.py  debug_masked.py  debug_spin.py  debug_visual.py  test_server.py  test_spin_estimator.py  test_video_ingest.py
